final version of contact

--- a/contact.html
+++ b/contact.html
@@ -67,8 +67,8 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for = "comments" class="form-label">Comment</label class="form-control">
-                            <textarea name = "comments" cols="50" rows="10" >
+                            <label for = "comments" class="form-label">Comment</label>
+                            <textarea name = "comments" cols="50" rows="10" class="form-control">
                             </textarea>
                         </div>
 
